modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-ingresses/constraints/policy_2.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8AllowedIngresses
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["Ingress"]
    namespaceSelector:
      matchLabels:
        custom-policy: example
  parameters:
    blockWildcardDomains: true
