modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-ingresses/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-ingresses
tests:
  - name: pss-deny-all
    template: constraint-template.yaml
    constraint: ../constraints/policy_2.yaml
    cases:
      - name: 001-allowed-no-wildcard
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-001-allowed-no-wildcard.yaml
        assertions:
          - violations: "no"
      - name: 003-disallowed-wildcard-in-host
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-003-disallowed-wildcard-in-host.yaml
        assertions:
          - violations: "yes"
      - name: 004-disallowed-wildcard-only
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-004-disallowed-wildcard-only.yaml
        assertions:
          - violations: "yes"
      - name: 002-disallowed-multiple-rules-one-wildcard
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-002-disallowed-multiple-rules-one-wildcard.yaml
        assertions:
          - violations: "yes"
      - name: 007-allowed-no-host-field
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-007-allowed-no-host-field.yaml
        assertions:
          - violations: "no"
  - name: security-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: 005-allowed-no-wildcard-when-disabled
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/006-005-allowed-no-wildcard-when-disabled.yaml
        assertions:
          - violations: "no"
      - name: 006-allowed-wildcard-when-disabled
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/007-006-allowed-wildcard-when-disabled.yaml
        assertions:
          - violations: "no"
